--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0",
+        "mews/purifier": "^2.1",
+        "stripe/stripe-php": "^6.17"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
