--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
         "mews/purifier": "^2.1",
+        "santigarcor/laratrust": "5.0.*",
         "stripe/stripe-php": "^6.17"
     },
     "require-dev": {
