--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravelcollective/html": "^5.4.0",
         "mews/purifier": "^2.1",
         "santigarcor/laratrust": "5.0.*",
-        "stripe/stripe-php": "^6.17"
+        "stripe/stripe-php": "^6.17",
+        "tymon/jwt-auth": "^1.0.0-rc.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
