--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "beyondcode/laravel-websockets": "^1.0",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
         "mews/purifier": "^2.1",
+        "pusher/pusher-php-server": "~3.0",
         "santigarcor/laratrust": "5.0.*",
         "stripe/stripe-php": "^6.17",
         "tymon/jwt-auth": "^1.0.0-rc.2"
